--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,21 +11,31 @@
   <body>
     <header class="row">
       <div class="col-3">
-        LOGO
+        <div class="circle">
+          <br />
+          You know
+          <br />
+          you game
+          <br />
+          too much
+        </div>
       </div>
-      <div class="col-4">
+      <div class="col-4 slogan">
         Splurting out silly gaming quotes since 2017
       </div>
-      <div class="col-5">
+      <div class="col-5 links">
         <%= link_to 'Contribute', '#' %>
         <%= link_to 'About', '#' %>
       </div>
     </header>
 
 
+    <hr/>
+
+
     <br class="clear" />
 
-    
+
     <%= yield %>
   </body>
 </html>
