--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,7 +1,7 @@
 @import "bootstrap";
 
 .clear {
-	clear: both;
+  clear: both;
 }
 
 .circle {
@@ -25,25 +25,37 @@
 }
 
 .slogan {
-	font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans-serif;
-	font-style: italic;
-	padding-top: 26px;
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans-serif;
+  font-style: italic;
+  padding-top: 26px;
 }
 
 .links {
-	padding-top: 26px;
+  padding-top: 26px;
 }
 
 .links a {
-	color: black;
-	font-size: 25px;
-	border-bottom: 1px solid #dfdfdf;
+  color: black;
+  font-size: 25px;
+  border-bottom: 1px solid #dfdfdf;
+  font-family: 'sf_archery_blackoblique', sans-serif;
+  font-weight:bold;
 }
 
 header {
-	border-top: 9px solid #222222;
+  border-top: 9px solid #222222;
 }
 
 hr {
-	clear: both;
+  clear: both;
+}
+
+h1 {
+  font-family: 'sf_archery_blackoblique', sans-serif;
+  font-weight: bold;
+  font-size: 48px;
+}
+
+h2 {
+  font-family: 'sf_archery_blackoblique', sans-serif;
 }
