--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -42,6 +42,19 @@
   font-weight:bold;
 }
 
+.next-quote {
+  color: #f84342;
+  font-family: 'sf_archery_blackoblique', sans-serif;
+  font-size: 20px;
+}
+
+.footer-blurb {
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans-serif;
+  font-style: italic;
+  text-align: right;
+  font-size: 10px;
+}
+
 header {
   border-top: 9px solid #222222;
 }
